cards need revision

--- a/package.json
+++ b/package.json
@@ -6,11 +6,23 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack serve --config webpack/webpack.dev.js",
-    "format": "prettier --write src webpack"
+    "build": "npm-run-all package:clean package:bundleJs package:compileBuildScript package:buildMarkup package:cleanTmp package:copyAssets",
+    "package:clean": "rm -rf build",
+    "package:compileBuildScript": "webpack --config webpack/webpack.build-script.js",
+    "package:buildMarkup": "node .build-process/main.js",
+    "package:cleanTmp": "rm -rf .build-process/",
+    "package:bundleJs": "webpack --config webpack/webpack.prod.js",
+    "package:copyAssets": "cp -R src/styles/* assets/* build",
+    "format": "prettier --write src webpack build.tsx",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "classnames": "^2.3.2",
+    "gsap": "^3.12.2",
+    "pino": "^8.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.0"
@@ -20,6 +32,14 @@
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.22.15",
     "@babel/preset-typescript": "^7.23.2",
+    "@storybook/addon-essentials": "^7.5.3",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/addon-links": "^7.5.3",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.5.3",
+    "@storybook/react": "^7.5.3",
+    "@storybook/react-webpack5": "^7.5.3",
+    "@storybook/testing-library": "^0.2.2",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
@@ -28,7 +48,10 @@
     "dotenv": "^16.3.1",
     "html-webpack-plugin": "^5.5.3",
     "json-loader": "^0.5.7",
+    "npm-run-all": "^4.1.5",
+    "pino-pretty": "^10.2.3",
     "prettier": "^3.0.3",
+    "storybook": "^7.5.3",
     "style-loader": "^3.3.3",
     "typescript": "^5.2.2",
     "webpack": "^5.89.0",
