--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "gsap": "^3.12.2",
     "lodash.isequal": "^4.5.0",
@@ -30,6 +31,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
+    "react-syntax-highlighter": "^15.5.0",
+    "web-vitals": "^3.5.0",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
@@ -45,10 +48,12 @@
     "@storybook/react": "^7.5.3",
     "@storybook/react-webpack5": "^7.5.3",
     "@storybook/testing-library": "^0.2.2",
+    "@types/axios": "^0.14.0",
     "@types/lodash.isequal": "^4.5.8",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-syntax-highlighter": "^15.5.10",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
