--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "classnames": "^2.3.2",
     "gsap": "^3.12.2",
     "lodash.isequal": "^4.5.0",
+    "moment": "^2.29.4",
     "pino": "^8.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
+    "uuid": "^9.0.1",
     "web-vitals": "^3.5.0",
     "zustand": "^4.4.6"
   },
@@ -55,6 +57,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/react-syntax-highlighter": "^15.5.10",
+    "@types/uuid": "^9.0.7",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
