--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
       "paths": {
         "@/*": ["./src/*"]
       },
+      "typeRoots": [
+        "node_modules/@types"
+      ],
       "resolveJsonModule": true,
       "declaration": true,
       "noEmit": true,
@@ -23,6 +26,6 @@
       "skipLibCheck": true,
       "allowJs": true
     },
-    "include": ["src"],
+    "include": ["src", "build.tsx"],
     "exclude": ["node_modules"]
   }
