--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
         "ES2017"
       ],
       "jsx": "react-jsx",
-      "module": "commonjs",
+      "module": "es2020",
       "rootDir": ".",
-      "moduleResolution": "node",
+      "moduleResolution": "bundler",
       "baseUrl": ".",
       "paths": {
         "@/*": ["./src/*"]
