feat(pm2): Adds pm2 process manager, adds web server to serve static content, updates Dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,6 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
-    image: couch-mint-web-nginx-webserver
+    image: couch-mint-web-server
     ports:
-      - "3000:3000"
+      - "8080:8080"
