--- a/package.json
+++ b/package.json
@@ -4,24 +4,22 @@
   "description": "A minimal technology blog.",
   "author": "Nick J Galante <nicholasgalante1997@gmail.com>",
   "scripts": {
-    "format": "prettier --write src webpack build.tsx",
+    "format": "prettier --write server src webpack build.tsx",
     "summarize-articles": "node scripts/summarize.mjs",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:HOME": "REQUEST_PAGE=\"@mint-home-page\" webpack serve --config webpack/webpack.dev.js",
-    "dev:BROWSE": "REQUEST_PAGE=\"@mint-browse-page\" webpack serve --config webpack/webpack.dev.js",
-    "dev:ARTICLE": "REQUEST_PAGE=\"@mint-main-article-page\" webpack serve --config webpack/webpack.dev.js",
+    "dev:HOME": "REQUEST_PAGE=\"@mint-home-page\" webpack serve --config webpack/webpack.dev.cjs",
+    "dev:BROWSE": "REQUEST_PAGE=\"@mint-browse-page\" webpack serve --config webpack/webpack.dev.cjs",
+    "dev:ARTICLE": "REQUEST_PAGE=\"@mint-main-article-page\" webpack serve --config webpack/webpack.dev.cjs",
     "build": "npm-run-all package:clean package:bundleJs package:compileBuildScript package:buildMarkup package:cleanTmp package:copyAssets",
     "package:clean": "rm -rf build",
-    "package:compileBuildScript": "webpack --config webpack/webpack.build-script.js",
-    "package:buildMarkup": "node .build-process/main.js",
+    "package:compileBuildScript": "webpack --config webpack/webpack.build-script.cjs",
+    "package:buildMarkup": "node .build-process/main.cjs",
     "package:cleanTmp": "rm -rf .build-process/",
-    "package:bundleJs": "webpack --config webpack/webpack.prod.js",
-    "package:copyAssets": "cp -R src/styles/* assets/* build",
+    "package:bundleJs": "webpack --config webpack/webpack.prod.cjs",
+    "package:copyAssets": "cp -R src/styles/* assets/* build/web",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
-  "keywords": [],
-  "license": "ISC",
   "dependencies": {
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
@@ -58,6 +56,7 @@
     "@types/react-dom": "^18.2.15",
     "@types/react-syntax-highlighter": "^15.5.10",
     "@types/uuid": "^9.0.7",
+    "autocannon": "^7.14.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.8.1",
     "dotenv": "^16.3.1",
@@ -74,6 +73,7 @@
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.10.0"
   },
+  "type": "module",
   "engines": {
     "node": "~18.18.0"
   }
