--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "gsap": "^3.12.2",
+    "heller-2-lite": "^0.0.18",
+    "heller-2-react": "^0.0.4",
     "lodash.isequal": "^4.5.0",
     "moment": "^2.29.4",
     "pino": "^8.16.1",
@@ -76,5 +78,6 @@
   "type": "module",
   "engines": {
     "node": "~18.18.0"
-  }
+  },
+  "packageManager": "pnpm@8.6.9"
 }
