--- a/package.json
+++ b/package.json
@@ -16,16 +16,18 @@
     "package:buildMarkup": "node .build-process/main.cjs",
     "package:cleanTmp": "rm -rf .build-process/",
     "package:bundleJs": "webpack --config webpack/webpack.prod.cjs",
-    "package:copyAssets": "cp -R src/styles/* assets/* build/web",
+    "package:copyAssets": "cp -R node_modules/heller-2-lite/build/css/* src/styles/* assets/* build/web",
+    "start": "npx serve build/web",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "dependencies": {
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
+    "fuse.js": "^7.0.0",
     "gsap": "^3.12.2",
-    "heller-2-lite": "^0.0.18",
-    "heller-2-react": "^0.0.4",
+    "heller-2-lite": "^0.0.19",
+    "heller-2-react": "^0.0.6",
     "lodash.isequal": "^4.5.0",
     "moment": "^2.29.4",
     "pino": "^8.16.1",
@@ -77,7 +79,7 @@
   },
   "type": "module",
   "engines": {
-    "node": "~18.18.0"
+    "node": "~18.19.0"
   },
-  "packageManager": "pnpm@8.6.9"
+  "packageManager": "pnpm@8.15.0+sha256.fd1eab68a6d403f35cf3259c53780d70b0f14bd74e39da2f917d201f554d8665"
 }
