feat: Flat data directory and updated config/app.json

--- a/config/app.json
+++ b/config/app.json
@@ -12,7 +12,7 @@
                 "metadata": {
                     "raw": [
                         "<title>@mint.</title>",
-                        "<meta name=\"description\" content=\"A minimal technology blog.\">"
+                        "<meta name=\"description\" content=\"A minimal technology blog.\" />"
                     ]
                 }
             },
@@ -49,28 +49,12 @@
     "data": {
         "articles": [
             {
-                "key": "@mint/how-i/react-project-structure.md",
-                "contentPath": "data/how-i/react-project-structure.md",
+                "key": "@mint/WEBWORKERS_PREFETCH_1",
+                "contentPath": "data/WEBWORKERS_PREFETCH_1.md",
                 "display": {
-                    "image": "/react.png",
-                    "imageAltText": "The react.js logo in a light blue hue.",
-                    "title": "How I'll set up a react application",
-                    "subtitle": "Let's walk through setting up a few different react apps.",
-                    "tags": [
-                        {
-                            "visible": "React",
-                            "keys": ["react", "react-dom"]
-                        }
-                    ]
-                }
-            },
-            {
-                "key": "@mint/how-to/prefetch-in-react.md",
-                "contentPath": "data/how-to/prefetch-in-react.md",
-                "display": {
-                    "image": "/react.png",
-                    "imageAltText": "The react.js logo in a light blue hue.",
-                    "title": "Setting up dynamic route prefetching in React in 10 minutes with WebWorkers and Context",
+                    "image": "/doodles/doodles_space_banana.jpeg",
+                    "imageAltText": "A doodles nft character emerging from a banana peel in a light blue themed outer space.",
+                    "title": "Using Webworkers To Prefetch Resources Client Side",
                     "subtitle": "Prefetching your application's resources enhances your end user's experience with your application because it reduces the idle time your user is spending on your site. Here's how it works.",
                     "tags": [
                         {
@@ -89,13 +73,13 @@
                 }
             },
             {
-                "key": "@mint/how-to/get-observability-into-web-app-performance",
-                "contentPath": "data/how-to/get-observability-into-web-app-performance.md",
+                "key": "@mint/WEBAPP_PERFORMANCE_1",
+                "contentPath": "data/WEBAPP_PERFORMANCE_1.md",
                 "display": {
-                    "image": "/react.png",
-                    "imageAltText": "The react.js logo in a light blue hue.",
-                    "title": "How to get observability into your web application's performance?",
-                    "subtitle": "Learning what parts of your application are in need of revision and updates allows us to grow as developers and app maintainers by learning from our implemantation pitfalls, and allows us to prioritize development work more efficiently.",
+                    "image": "/doodles/doodles_pink.png",
+                    "imageAltText": "A doodles character in a blue shirt against a pink background.",
+                    "title": "Getting Observability Into Webapp Performance",
+                    "subtitle": "Take longer to load your webpage. I'll wait.",
                     "tags": [
                         {
                             "visible": "React",
@@ -117,13 +101,13 @@
                 }
             },
             {
-                "key": "@mint/how-to/lazy-load-images-with-native-html",
-                "contentPath": "data/how-to/lazy-load-images-with-native-html.md",
+                "key": "@mint/HTML5_IMAGE_LAZY_LOADING",
+                "contentPath": "data/HTML5_IMAGE_LAZY_LOADING.md",
                 "display": {
-                    "image": "/html.png",
-                    "imageAltText": "The html5 logo in orange.",
-                    "title": "How to lazy load images with native html",
-                    "subtitle": "Lazy loading images allows your application to fetch its resources on demand, as opposed to up-front; allowing your users to engage with your application quicker.",
+                    "image": "/doodles/doodles_cloud.webp",
+                    "imageAltText": "A doodle nft character floating on a cloud.",
+                    "title": "using Native HTML5 to Lazy Load Images",
+                    "subtitle": "Didnt even really need to be an article this one. Too quick.",
                     "tags": [
                         {
                             "visible": "Html",
@@ -141,59 +125,11 @@
                 }
             },
             {
-                "key": "@mint/how-to/react-server-side-rendering-with-no-framework",
-                "contentPath": "data/how-to/react-server-side-rendering-with-no-framework.md",
+                "key": "@mint/PATTERNS_TRY_1",
+                "contentPath": "data/PATTERNS_TRY_1.md",
                 "display": {
-                    "image": "/react.png",
-                    "imageAltText": "The react logo in a light blue hue.",
-                    "title": "How to set up server side rendering for your react application, with no framework",
-                    "subtitle": "Server Side rendering your react application has a number of performance benefits for certain larger react apps. We'll dive into those benefits and how to set up server side rendering in react here.",
-                    "tags": [
-                        {
-                            "visible": "React",
-                            "keys": ["react", "react-dom"]
-                        }, 
-                        {
-                            "visible": "Optimization",
-                            "keys": ["optimization"]
-                        },
-                        {
-                            "visible": "Server-Side Rendering",
-                            "keys": ["ssr", "server-side rendering"]
-                        }
-                    ]
-                }
-            },
-            {
-                "key": "@mint/how-to/react-static-site-generation-with-no-framework",
-                "contentPath": "data/how-to/react-static-site-generation-with-no-framework.md",
-                "display": {
-                    "image": "/react.png",
-                    "imageAltText": "The react logo in a light blue hue.",
-                    "title": "How to set up static site generation for your react application, with no framework",
-                    "subtitle": "Server Side rendering your react application has a number of performance benefits for certain larger react apps. We'll dive into those benefits and how to set up server side rendering in react here.",
-                    "tags": [
-                        {
-                            "visible": "React",
-                            "keys": ["react", "react-dom"]
-                        }, 
-                        {
-                            "visible": "Optimization",
-                            "keys": ["optimization"]
-                        },
-                        {
-                            "visible": "Static Site Generation",
-                            "keys": ["ssg", "static site generation"]
-                        }
-                    ]
-                }
-            },
-            {
-                "key": "@mint/patterns/predictable-try-in-javascript",
-                "contentPath": "data/patterns/predictable-try-in-javascript.md",
-                "display": {
-                    "image": "/es6.png",
-                    "imageAltText": "The javascript logo.",
+                    "image": "/doodles/doodles_pink.png",
+                    "imageAltText": "A doodles character in a blue shirt against a pink background.",
                     "title": "Offering an alternatve method for executing code that could fail. Based on the Rust 'Option' concept.",
                     "subtitle": "There are a number of code smells with the javascript usage of try-catch. Here's a simple alternative that could help standardize your handling of fallable code.",
                     "tags": [
@@ -205,13 +141,13 @@
                 }
             },
             {
-                "key": "@mint/anecdotal/gotham-styled-components-learnings",
-                "contentPath": "data/anecdotal/gotham-styled-components-learnings.md",
+                "key": "@mint/ANECDOTE_GOTHAM_1",
+                "contentPath": "data/ANECDOTE_GOTHAM_1.md",
                 "display": {
-                    "image": "/styled-components.png",
-                    "imageAltText": "The styled-components logo.",
-                    "title": "Reflecting on the usage of styled-components in a react component library developed while at Amazon Games.",
-                    "subtitle": "When I worked at Amazon Games, I led an initiative to construct a net new design system that was more focused on extensability. Here, we dive into some of the learnings.",
+                    "image": "/doodles/doodles_space_banana.jpeg",
+                    "imageAltText": "A doodles nft character emerging from a banana peel in a light blue themed outer space.",
+                    "title": "ANECDOTE: Amazon Games Gotham",
+                    "subtitle": "Done went and made a design system.",
                     "tags": [
                         {
                             "visible": "React",
@@ -225,12 +161,12 @@
                 }
             },
             {
-                "key": "@mint/anecdotal/tales-from-the-couch-dev_1",
-                "contentPath": "data/anecdotal/tales-from-the-couch-dev_1.md",
+                "key": "@mint/ANECDOTE_COUCHGAG_1",
+                "contentPath": "data/ANECDOTE_COUCHGAG_1.md",
                 "display": {
-                    "image": "/styled-components.png",
+                    "image": "/doodles/doodles_skeleton.webp",
                     "imageAltText": "The react.js logo in a light blue hue.",
-                    "title": "Tales From The Couch Dev 1",
+                    "title": "ANECDOTE: Couch Gag 1",
                     "subtitle": "This is my everest.",
                     "tags": [
                         {
@@ -241,11 +177,11 @@
                 }
             },
             {
-                "key": "@mint/lets-build/blackthorn-sync",
-                "contentPath": "data/lets-build/blackthorn-sync.md",
+                "key": "@mint/ESM_BROADCAST_CHANNEL_1",
+                "contentPath": "data/ESM_BROADCAST_CHANNEL_1.md",
                 "display": {
                     "image": "/doodles/doodles_cloud.webp",
-                    "imageAltText": "A composite style image of doodles nft character headshots organized into rows.",
+                    "imageAltText": "A doodle nft character floating on a cloud.",
                     "title": "Build A Cross Window Lighting Synchronizer with the Broadcast Channel, ESM, and Import Maps",
                     "subtitle": "Broh went wild in this one.",
                     "tags": [
